  * New FrostWire "Deep Torrent" search. FrostWire will search inside
    top matching torrents for individual files matching the current query.
  * Core upgrade, if a .torrent fails to download from its HTTP location
    FrostWire will download it from the DHT if it can find it there.
  * UX upgrade, ability to hide/show seeding torrents on transfer manager.
  * UX fix, search results can now be sorted by file type.
  * Mininova is back.

 -- FrostWire Team <contact@frostwire.com>  Tue, 2 Aug 2011 22:55:54 -0500

frostwire (5.0.8) stable; urgency=high

  * Shows torrent details after a download starts to bring traffic back
    to the search engine that provided the result as a default setting.
  * Shows FrostWire icon for search results to which we can't resolve the
    file extension.
  * Removes Mininova from search engines.

 -- FrostWire Team <contact@frostwire.com>  Sat, 16 Jul 2011 19:41:08 -0500

frostwire (5.0.7) stable; urgency=high

  * UX upgrade, send file or send folder support when a file or folder
    is dropped on FrostWire.
  * UX upgrade, file choosing dialogs on Mac now also show mounted volumes.
  * UX upgrade, playback support for m4a files.
  * UX upgrade, search result filters re-arranged.
  * UX upgrade, main search button gone, updated search text box to include
    clickable search icon.
  * UX upgrade, filters re-arranged.
  * UX upgrade, searches can be up to 50 characters long.
  * UX upgrade, either disconnected or turbocharged, no idle state.
  * UX upgrade, search as you type on the library, no more search button.
    Disconnected only if it cannot connect to the internet.
  * UX bugfix, iTunes options were not visible for Windows users.
  * UX bugfix, fixes possible UI freeze on startup.
  * UI bugfix, sending songs to iTunes on Mac is now done in a single process.
  * Mac OSX Lion compatible.
  * Bugfix, issue where opening a torrent from maglnk.com would result in a 
    double invocation of the Partial Dialog window.